@@ -1,0 +1,78 @@
+/*
+ * ART. A Reporting Tool.
+ * Copyright (C) 2020 Enrico Liboni <eliboni@users.sf.net>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ */
+package art.job;
+
+import java.io.Serializable;
+import java.util.Date;
+
+/**
+ * Represents a job run
+ * 
+ * @author Timothy Anyona
+ */
+public class JobRunDetails implements Serializable {
+	
+	private static final long serialVersionUID = 1L;
+	
+	private Job job;
+	private String runId;
+	private Date startTime;
+
+	/**
+	 * @return the job
+	 */
+	public Job getJob() {
+		return job;
+	}
+
+	/**
+	 * @param job the job to set
+	 */
+	public void setJob(Job job) {
+		this.job = job;
+	}
+
+	/**
+	 * @return the runId
+	 */
+	public String getRunId() {
+		return runId;
+	}
+
+	/**
+	 * @param runId the runId to set
+	 */
+	public void setRunId(String runId) {
+		this.runId = runId;
+	}
+
+	/**
+	 * @return the startTime
+	 */
+	public Date getStartTime() {
+		return startTime;
+	}
+
+	/**
+	 * @param startTime the startTime to set
+	 */
+	public void setStartTime(Date startTime) {
+		this.startTime = startTime;
+	}
+	
+}
