@@ -636,6 +636,7 @@ page.title.ruleRuleValues                     = Rule - Rule Values
 page.title.ruleValues                         = Rule Values
 page.title.ruleValuesConfiguration            = Rule Value Configuration
 page.title.rules                              = Rules
+page.title.runningJobs                        = Running Jobs
 page.title.runningQueries                     = Running Queries
 page.title.scheduleUsage                      = Schedule Usage
 page.title.schedules                          = Schedules
