@@ -636,6 +636,7 @@ page.title.ruleRuleValues                     = Thamani-Kanuni za Kanuni
 page.title.ruleValues                         = Thamani-Kanuni
 page.title.ruleValuesConfiguration            = Usanidi wa thamani-kanuni
 page.title.rules                              = Kanuni
+page.title.runningJobs                        = Kazi zinazotekelezwa
 page.title.runningQueries                     = Maulizo yanayotekelezwa
 page.title.scheduleUsage                      = Matumizi ya ratiba
 page.title.schedules                          = Ratiba
