@@ -1,5 +1,5 @@
 <%-- 
-    Document   : runningQueries
+    Document   : runningJobs
     Author     : Timothy Anyona
 --%>
 
@@ -11,13 +11,10 @@
 <%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <%@taglib uri="https://www.owasp.org/index.php/OWASP_Java_Encoder_Project" prefix="encode" %>
 
-<spring:message code="page.title.runningQueries" var="pageTitle"/>
+<spring:message code="page.title.runningJobs" var="pageTitle"/>
 
 <spring:message code="dataTables.text.showAllRows" var="showAllRowsText" javaScriptEscape="true"/>
 <spring:message code="page.message.errorOccurred" var="errorOccurredText" javaScriptEscape="true"/>
-<spring:message code="page.message.queryCancelled" var="queryCancelledText" javaScriptEscape="true"/>
-<spring:message code="dialog.button.cancel" var="cancelText" javaScriptEscape="true"/>
-<spring:message code="dialog.button.ok" var="okText" javaScriptEscape="true"/>
 
 <t:mainPageWithPanel title="${pageTitle}" hasTable="true" hasNotify="true">
 
@@ -34,20 +31,15 @@
 		<script type="text/javascript">
 			$(document).ready(function () {
 				$('a[id="configure"]').parent().addClass('active');
-				$('a[href*="runningQueries"]').parent().addClass('active');
+				$('a[href*="jobsConfig"]').parent().addClass('active');
 
-				var tbl = $('#queries');
+				var tbl = $('#jobs');
 
 				var pageLength = undefined; //pass undefined to use the default
 				var showAllRowsText = "${showAllRowsText}";
 				var contextPath = "${pageContext.request.contextPath}";
 				var localeCode = "${pageContext.response.locale}";
-				var dataUrl = "${pageContext.request.contextPath}/getRunningQueries";
-				var deleteRecordText = "${cancelText}";
-				var okText = "${okText}";
-				var cancelText = "${cancelText}";
-				var deleteRecordUrl = "${pageContext.request.contextPath}/cancelQuery";
-				var recordDeletedText = "${queryCancelledText}";
+				var dataUrl = "${pageContext.request.contextPath}/getRunningJobs";
 				var errorOccurredText = "${errorOccurredText}";
 				var showErrors = ${showErrors};
 				var columnDefs = undefined; //pass undefined to use the default
@@ -60,26 +52,12 @@
 				//https://stackoverflow.com/questions/31880793/jquery-datatables-handle-null-sub-objects
 				//https://stackoverflow.com/questions/30489307/make-column-data-as-hyperlink-datatable-jquery/30489991
 				var columns = [
-					{"data": "report",
-						render: function (data, type) {
-							if (type === 'display') {
-								return '<a href="' + contextPath + '/reportConfig?reportId=' + data.reportId
-										+ '">' + escapeHtmlContent(data.name) + '</a>';
-							} else {
-								return data.name;
-							}
-						}
-					},
-					{"data": "job",
+					{"data": "job.jobId", "defaultContent": "",
 						render: function (data) {
-							if (data === null) {
-								return "";
-							} else {
-								return escapeHtmlContent(data.name) + " (" + data.jobId + ")";
-							}
+							return data;
 						}
 					},
-					{"data": "user.username", "defaultContent": "",
+					{"data": "job.name", "defaultContent": "",
 						render: function (data) {
 							return escapeHtmlContent(data);
 						}
@@ -107,8 +85,7 @@
 								return data;
 							}
 						}
-					},
-					{"data": "dtAction"}
+					}
 				];
 
 				//initialize datatable
@@ -117,47 +94,6 @@
 						showErrors, columnDefs, columns);
 
 				var table = oTable.api();
-
-				tbl.find('tbody').on('click', ".deleteRecord", function () {
-					var row = $(this).closest("tr"); //jquery object
-					var recordName = escapeHtmlContent(row.data("name"));
-					var recordId = row.attr("data-id");
-
-					//display confirm dialog
-					bootbox.confirm({
-						message: deleteRecordText + ": <b>" + recordName + "</b>",
-						buttons: {
-							confirm: {
-								label: okText
-							},
-							cancel: {
-								label: cancelText
-							}
-						},
-						callback: function (result) {
-							if (result) {
-								//user confirmed delete. make delete request
-								$.ajax({
-									type: "POST",
-									dataType: "json",
-									url: deleteRecordUrl,
-									data: {runId: recordId},
-									success: function (response) {
-										if (response.success) {
-											table.row(row).remove().draw(false); //draw(false) to prevent datatables from going back to page 1
-											notifyActionSuccessReusable(recordDeletedText, recordName);
-										} else if (response.errorMessage) {
-											notifyActionErrorReusable(errorOccurredText, escapeHtmlContent(response.errorMessage), showErrors);
-										} else {
-											table.row(row).remove().draw(false);
-										}
-									},
-									error: ajaxErrorHandler
-								});
-							} //end if result
-						} //end callback
-					}); //end bootbox confirm
-				}); //end on click
 
 				yadcf.init(table,
 						[
@@ -170,17 +106,10 @@
 							{
 								column_number: 1,
 								filter_type: 'text',
-								filter_default_label: "",
-								style_class: "yadcf-report-name-filter"
+								filter_default_label: ""
 							},
 							{
 								column_number: 2,
-								filter_type: 'text',
-								filter_default_label: "",
-								style_class: "yadcf-report-name-filter"
-							},
-							{
-								column_number: 3,
 								filter_type: 'text',
 								filter_default_label: "",
 								style_class: "yadcf-report-name-filter"
@@ -223,14 +152,12 @@
 			</button>
 		</div>
 
-		<table id="queries" class="table table-striped table-bordered table-condensed">
+		<table id="jobs" class="table table-striped table-bordered table-condensed">
 			<thead>
 				<tr>
-					<th><spring:message code="page.text.report"/><p></p></th>
-					<th><spring:message code="jobs.text.job"/><p></p></th>
-					<th><spring:message code="page.text.user"/><p></p></th>
+					<th><spring:message code="page.text.id"/><p></p></th>
+					<th><spring:message code="page.text.name"/><p></p></th>
 					<th><spring:message code="page.text.startTime"/><p></p></th>
-					<th class="noFilter actionCol"><spring:message code="page.text.action"/><p></p></th>
 				</tr>
 			</thead>
 		</table>
