@@ -2,6 +2,7 @@ ART 4.18
 * Allow editing of datasource in multiple report edit
 * Added extension option for csv report format
 * Added import/export for pipelines
+* Added running jobs page
 * Updated sql server jdbc driver
 
 ART 4.17
